--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<p>ddd</p>
 
-<h3>hello...</h3>
-
-<app-servers></app-servers>
+<div class="container">
+  <h3>hello...</h3>
+  <app-servers></app-servers>
+</div>
