--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,2 +1,13 @@
+
+
+<input (input)="onChangeInput($event)" type="text" name="" value=""><br>
+
+<input [(ngModel)]="inputTextValue" type="text" name="" value=""><br>
+<p>{{inputTextValue}}</p>
+
+<button (click)="buttonClick()" [disabled]="!disableButton" type="button" name="button" class="btn btn-primary">Click Me </button>
+<p [innerText]="disableButton"></p>
+<p>{{buttonClickEvent}}</p>
+
 <app-server></app-server>
 <app-server></app-server>
