build in directives

--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,1 +1,3 @@
 <p>this is my app {{"Server"}}, server id is {{serverNumber}} and server name is {{getServerName()}}</p>
+
+<!-- <p [ngStyle]="{backgroundColor: getColor()}" [ngClass]="{online:serverStatus=== 'online'}">server status: {{serverStatus}}</p> -->
